--- a/Futbol/css/tomba.css
+++ b/Futbol/css/tomba.css
@@ -16,7 +16,7 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     line-height: 1.5;
     margin-top: 0;
@@ -38,7 +38,7 @@ body {
     display: flex;
     font-weight: bold;
     font-style: italic;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 50px;
 }  
 
@@ -46,7 +46,7 @@ body {
     line-height: 1.5;
     margin-top: 0;
     margin-left: 40%;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
 }
 
@@ -55,7 +55,7 @@ body {
     color: black;
     font-weight: bold;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     margin-top: 0;
     margin-bottom: 0;}
@@ -67,7 +67,7 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     line-height: 1.5;
     margin-top: 0;
@@ -80,7 +80,7 @@ body {
     justify-content: center;
     display: flex;
     font-style: italic;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -95,7 +95,7 @@ body {
     font-size: 20px;
     color: white;
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     margin-left: 10%;
     margin-right: 10%;
@@ -105,7 +105,7 @@ body {
     font-size: 40px;
     color: white;
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     margin-left: 10%;
     margin-right: 10%;
